# fish_eeg

./: .gitignore  LICENSE  README.md  README.txt  environment.yml  getacousticdata.bash  gsutilinit.bash  hunsaker_startercode.ipynb  index.html  overview.html  pipeline.html  pyproject.toml  pytest.ini  repo.html  requirements.txt  style.css  team.html  ubjid}, Frequency: {freq}')  visuals.html
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/workflows/: testsuite.yml  zipdata.yml
analysis/: .gitignore  20251105_cumulative_averaging.ipynb  20251105_hunsaker_pipline.ipynb  20251111_hunsaker_startercode_v2.ipynb  20251114_bootstrap_again.ipynb  bootstrapagain_yash.ipynb  ci_amplitude_plot.html  fft_subtraction_analysis.ipynb  pipeline_config.yaml  prelim_CI_data.csv  relative_mag_analysis.ipynb  visualize_prelim_CI_data.ipynb
analysis/CI_csv/deadFish/: deadFish_330Hz_125dB_CI_0.csv
analysis/CI_csv/hydrolagusColliei_4/: hydrolagusColliei_4_100Hz_115dB_CI_0.csv  hydrolagusColliei_4_200Hz_135dB_CI_0.csv  hydrolagusColliei_4_200Hz_140dB_CI_0.csv  hydrolagusColliei_4_330Hz_140dB_CI_0.csv
analysis/CI_csv/hydrolagusColliei_5/: hydrolagusColliei_5_100Hz_110dB_CI_0.csv  hydrolagusColliei_5_200Hz_130dB_CI_1.csv  hydrolagusColliei_5_200Hz_135dB_CI_1.csv  hydrolagusColliei_5_200Hz_140dB_CI_0.csv  hydrolagusColliei_5_55Hz_115dB_CI_0.csv  hydrolagusColliei_5_55Hz_120dB_CI_0.csv
analysis/CI_csv/hydrolagusColliei_6/: hydrolagusColliei_6_330Hz_100dB_CI_0.csv  hydrolagusColliei_6_330Hz_105dB_CI_1.csv  hydrolagusColliei_6_330Hz_110dB_CI_1.csv  hydrolagusColliei_6_330Hz_115dB_CI_0.csv  hydrolagusColliei_6_330Hz_115dB_CI_1.csv  hydrolagusColliei_6_330Hz_120dB_CI_0.csv
analysis/CI_csv/hydrolagusColliei_7/: hydrolagusColliei_7_440Hz_145dB_CI_0.csv
analysis/CI_csv/hydrolagusColliei_8/: hydrolagusColliei_8_100Hz_105dB_CI_0.csv  (+9 more)
analysis/old/: 20251111_hunsaker_ICA_wavelet_starter_code.ipynb
assets/css/: style.css
docs/: component_specification.md  functional_specification.md
examples/PipelineScript/: driver_run_pipeline.sh  run_pipeline.sh  yash_config.yaml
pages/: overview.html  pipeline.html  repo.html  team.html  visuals.html
results/aoi/: ratfish_auditory_thresholds.csv  ratfish_auditory_thresholds_PAL.csv  use_case_components.txt
results/christopher/: user_story
src/: constants.py  data.py  gsutilinit.bash  plotting.py  preprocess.py  utils.py
src/condainit/: README.md  condainit.bash  environment.yml
src/fish_eeg/: constants.py  data.py  denoisers.py  fft.py  filters.py  pipeline.py  plotting.py  preprocess.py  pyproject.toml  reconstruct.py  statistics.py  utils.py
src/fish_eeg/configs/: base_config.yaml
src/passive_acoustic/: README.md  getacousticdata.bash  gsutilinit.bash  plotspectra.py
test_data/: empty_data.npz
tests/: Christopher_test_utils.py  conftest.py  test_fft.py  test_filter.py  test_load_data.py  test_preprocess.py  test_preprocessor.py  test_utils.py  test_utils2.py
tools/analysis/: README_20251114_bootstrap_again.txt  README_visualize_prelim_CI_data.txt
tools/passive_acoustic/: PTsoundscape.py  Pugetsoundscape.py  README.md  getacousticdata.bash  gsutilinit.bash  plotspectra.py
(+403 files in other folders)
