[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/fish_eeg",
    "LICENSE",
    "README.md",
]
exclude = [
    "tests",
]

[project]
name = "fish_eeg"
authors = [
    { name = "Michael James", email = "mkj29@uw.edu" },
]
version = "0.0.0"
description = "The Fish EEG project package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.25",
    "pandas>=2.1",
] 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}